crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_expression_throw_and_return_in_expression_contexts.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun expressionJumps(value: String?): String {
  val checked = value ?: throw MissingValue()
  return checked.takeIf { it.isNotEmpty() } ?: return "empty"
}

fun guardReturn(isOpen: Boolean) {
  if (!isOpen) return
  val afterGuard = Unit
}

diagnostics:
(none)
