crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_extension_property_parenthesized_function_receiver.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val ((Int) -> Int).result: Int
  get() = 1

diagnostics:
(none)
