crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_file_annotations_package_and_imports.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@file:FileMarker("parser")
@file:Suppress("unused")

package samples.structure

import kotlin.collections.List

class FilePreamble

@Target(AnnotationTarget.FILE)
annotation class FileMarker(val value: String)

diagnostics:
(none)
