crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_file_with_shebang_and_package.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
#!/usr/bin/env kotlin

package samples.scriptlike

fun main() {
  println("ready")
}

diagnostics:
(none)
