crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_function_expression_body_and_type_parameters.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun <T> identity(value: T): T = value

fun <T : Comparable<T>> maxOf(left: T, right: T): T =
  if (left >= right) left else right

diagnostics:
(none)
