crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_function_extension_receiver.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun String.surrounded(prefix: String, suffix: String): String = prefix +
  this +
  suffix

fun PsiElement?.containsNewline(): Boolean = textContains('\n')

fun com.example.Scope.renderQualified(): String = toString()

fun MutableMap<String, Expression<*>>.record(
  key: String,
  value: Expression<*>
) {
  put(key, value)
}

diagnostics:
(none)
