crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_function_operator_infix_suspend.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Counter(val value: Int) {
  operator fun plus(other: Counter): Counter = Counter(value + other.value)

  infix fun above(other: Counter): Boolean = value > other.value
}

suspend fun fetchValue(): String = "value"

diagnostics:
(none)
