crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_function_top_level_and_block_body.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun sum(left: Int, right: Int): Int {
  return left + right
}

fun value(): Int {
  return 0
}

diagnostics:
(none)
