crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_if_expression_branches_and_nesting.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun choose(a: Int, b: Int, c: Int): Int {
  val logged = trace(if (a > b) a else b, c)
  return if (a > b)
      if (a > c) a else c
    else if (b > c) b else c
}

diagnostics:
(none)
